[gd_scene load_steps=22 format=3 uid="uid://c4aso13oksqwx"]

[ext_resource type="Texture2D" uid="uid://doyfkpuqoybnn" path="res://art/characters/slime.png" id="1_1ybuv"]
[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_4wfbl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vhwny"]
atlas = ExtResource("1_1ybuv")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvb5h"]
atlas = ExtResource("1_1ybuv")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3j7rl"]
atlas = ExtResource("1_1ybuv")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxcl7"]
atlas = ExtResource("1_1ybuv")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8nm8"]
atlas = ExtResource("1_1ybuv")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oodrd"]
atlas = ExtResource("1_1ybuv")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2v0e"]
atlas = ExtResource("1_1ybuv")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vng8j"]
atlas = ExtResource("1_1ybuv")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_up1w1"]
atlas = ExtResource("1_1ybuv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_exa1b"]
atlas = ExtResource("1_1ybuv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lln4r"]
atlas = ExtResource("1_1ybuv")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7y3bb"]
atlas = ExtResource("1_1ybuv")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdj48"]
atlas = ExtResource("1_1ybuv")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kl8rr"]
atlas = ExtResource("1_1ybuv")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6n0v"]
atlas = ExtResource("1_1ybuv")
region = Rect2(0, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_sow7j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhwny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvb5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3j7rl")
}],
"loop": false,
"name": &"charge",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxcl7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8nm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oodrd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2v0e")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vng8j")
}],
"loop": false,
"name": &"hit",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_up1w1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exa1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lln4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7y3bb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdj48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kl8rr")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6n0v")
}],
"loop": false,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4r4wc"]
radius = 62.0081

[sub_resource type="CircleShape2D" id="CircleShape2D_kd60e"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_c0wm0"]
radius = 5.0

[node name="blueslime" type="CharacterBody2D" groups=["game_events"]]
script = ExtResource("1_4wfbl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(0, 1, 1, 1)
sprite_frames = SubResource("SpriteFrames_sow7j")
animation = &"charge"
offset = Vector2(0, -3)

[node name="detection_area" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_4r4wc")

[node name="enemy_hitbox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_kd60e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_c0wm0")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.36

[node name="death_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0.74902, 0, 0, 1)
offset_left = -7.0
offset_top = 2.0
offset_right = 133.0
offset_bottom = 29.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[node name="justhit" type="Timer" parent="."]
wait_time = 0.25

[node name="attack" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="attack_done" type="Timer" parent="."]
wait_time = 0.75

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="justhit" to="." method="_on_justhit_timeout"]
[connection signal="timeout" from="attack" to="." method="_on_attack_timeout"]
[connection signal="timeout" from="attack_done" to="." method="_on_attack_done_timeout"]
